# MarketTesting

./: .gitignore  README.md  dataFinder.py  formatting.py  main.py  pyproject.toml  testCode.py  tickers.csv
.github/workflows/: pylint.yml
dataFolder/: NVDA.csv
src/: formatting.py  testCode.py
src/dataFolder/: AACBR.csv  AACIW.csv  AAL.csv  AAOI.csv  AAPB.csv  AAPG.csv  AAPL.csv  AAUS.csv  AAVM.csv  AAXJ.csv  ABAT.csv  ABI.csv  ABLLL.csv  ABLV.csv  ABLVW.csv  ABSI.csv  ABVC.csv  ABVX.csv  ACB.csv  ACDC.csv  ACGLN.csv  ACHV.csv  ACIC.csv  ACNB.csv  ACNT.csv  ACONW.csv  ACT.csv  ACTG.csv  ACWX.csv  ADAM.csv  ADAMI.csv  ADAMN.csv  ADAMZ.csv  ADBE.csv  ADEA.csv  ADI.csv  ADMA.csv  ADN.csv  ADPT.csv  ADSE.csv  (+59 more)
src/markettesting/: StockModel.py  __init__.py  codePractice.py  config.py  dataFinder.py  dataLog.py  data_finder.py  formatting.py  frontend.py  main.py  modelCreation.py  model_creation.py  models.py  myModel.keras  stock_model.py  tickers.csv
src/markettesting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/markettesting/analysis/: __init__.py  data_log.py
src/markettesting/dataFolder/: AACB.csv  AACBR.csv  AACBU.csv  AACG.csv  AACI.csv  AACIU.csv  AADR.csv  AALG.csv  AAME.csv  AAON.csv  AAPD.csv  AAPL.csv  AAPU.csv  AARD.csv  AAVM.csv  AAXJ.csv  ABCL.csv  ABCS.csv  ABEO.csv  ABIG.csv  ABL.csv  ABLLL.csv  ABNB.csv  ABOS.csv  ABP.csv  ABPWW.csv  ABTC.csv  ABTS.csv  ABUS.csv  ABVE.csv  ABVEW.csv  ACAD.csv  ACET.csv  ACFN.csv  ACGL.csv  ACGLN.csv  ACGLO.csv  ACHC.csv  ACIC.csv  ACIU.csv  (+112 more)
src/markettesting/models/: stock_model.py
src/markettesting/stock_models/: __init__.py  stock_model.py
