[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markettesting"
version = "0.0.1"
description = "My market testing tools"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0.0",
    "tensorflow>=1.0.0",
    "yfinance>=0.2.66",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["markettesting"]