[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markettesting"
version = "0.0.1"
description = "Stock Market Training"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0.0",
    "tensorflow>=1.0.0",
    "yfinance>=0.2.66",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "yfinance>=0.2.66",
    "matplotlib>=3.10.7",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["markettesting"]

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
]

[tool.pylint.main]
source-roots = ["src"]